--- a/config.json
+++ b/config.json
@@ -1,16 +1,8 @@
 {
     "weights": {
-        "mask_rcnn_alita.h5": "https://github.com/Rene-Michel99/MaskRCNN-API/releases/download/weights/mask_rcnn_alita.h5",
-        "mask_rcnn_coco.h5": "https://github.com/Rene-Michel99/Mask-RCNN-TF2.8/releases/download/pretrained_weights/mask_rcnn_coco.h5"
+        "mask_rcnn_alita.h5": "https://github.com/Rene-Michel99/MaskRCNN-API/releases/download/weights/mask_rcnn_alita.h5"
     },
     "modelsConfig": [
-        {
-            "name": "alita",
-            "imagesPerGpu": 1,
-            "numClasses": 1,
-            "classNames": ["BG", "alita"],
-            "weights": "mask_rcnn_alita.h5"
-        },
         {
             "name": "coco",
             "imagesPerGpu": 1,
