--- a/nginx.conf
+++ b/nginx.conf
@@ -25,7 +25,7 @@ http {
     keepalive_timeout 5;
     proxy_read_timeout 1200s;
 
-    location ~ ^/(block|inference|updateConfig|workers|doc|static) {
+    location ~ ^/(block|classes|inference|updateConfig|workers|doc|static) {
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header Host $http_host;
       proxy_redirect off;
